--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -20,15 +20,8 @@ img[src$='#center'] {
   font-family: "Satisfy", cursive;
 }
 
-.typeit {
-  .code {
-    padding: .375rem;
-    font-size: .875rem;
-    font-family: $code-font-family;
-    font-weight: bold;
-    word-break: break-all;
-  }
+.post-info-share{
+  font-size: 32px;
 }
-
 
 
